feat: implement filter for stock dashboard